--- a/c++core/c++core.vcxproj
+++ b/c++core/c++core.vcxproj
@@ -140,6 +140,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="01学生类.cpp" />
+    <ClCompile Include="02设计立方体类.cpp" />
+    <ClCompile Include="03circle.cpp" />
+    <ClCompile Include="03point.cpp" />
+    <ClCompile Include="03点和园的关系.cpp" />
+    <ClCompile Include="04多态案例-计算器实现.cpp" />
+    <ClCompile Include="05多态案例-制作饮品.cpp" />
+    <ClCompile Include="06电脑组装.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Circle.h" />
+    <ClInclude Include="Point.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
